# cheugy

./: .gitignore  Cargo.toml  README.md
cmd/cheugy/: Cargo.toml
cmd/cheugy/src/: main.rs
core/: Cargo.toml
core/src/: cluster_engine.rs  entity_graph.rs  lib.rs  patterns.rs  perl_bridge.rs  pipeline.rs  relation_engine.rs  schema.rs
core/tests/: extractors.rs
docs/: architecture.md
extractors/: db_tables.pl  entrypoints.pl  env_vars.pl  external_urls.pl  feature_flags.pl  http_routes.pl  manifest.json  metrics.pl  queues.pl  rpc_services.pl  scheduled_jobs.pl
extractors/t/: extractors.t
schema/: evidence.schema.json  observation.schema.json
scripts/: scan.pl
tui/: Cargo.toml
tui/src/: explorer.rs
