[package]
name = "cheugy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cheugy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
cheugy-core = { path = "../../core" }
cheugy-tui = { path = "../../tui" }
